Fix modal scroll on mobile

--- a/src/app/components/faq/faq.component.scss
+++ b/src/app/components/faq/faq.component.scss
@@ -2,9 +2,11 @@
 
 .content {
   width: 100vw;
+  max-height: 100vh;
   color: var(--green-12);
   background-color: var(--green-2);
   padding: 20px;
+  overflow-y: auto;
 
   .pre {
     margin: 0;
